sliding menu overflow screen issue fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,7 +19,8 @@ $color-orange-beta: rgba(230, 145, 18, 0.8);
 
 body,
 html {
-  height: 100%
+  height: 100%;
+  overflow-x:hidden;
 }
 
 body {
